# reharmonize-legacy-metadata

./: .gitignore  README.md
.github/workflows/: transform-af.yml  transform-atacseq.yml  transform-cedar-10x-multiome.yml  transform-cedar-af.yml  transform-cedar-histology.yml  transform-cedar-lightsheet.yml  transform-cedar-maldi.yml  transform-cedar-music.yml  transform-cedar-rnaseq.yml  transform-cedar-visium-no-probes.yml  transform-celldive.yml  transform-codex.yml  transform-desi.yml  transform-histology.yml  transform-imc-2d.yml  transform-lcms.yml  transform-lightsheet.yml  transform-maldi.yml  transform-mibi.yml  transform-rnaseq.yml
glossary/: af-glossary.csv  cedar-glossary.csv  mibi-glossary.csv
mappings/value-mapping/: acquisition_instrument_model.json  barcode_offset.json  barcode_read.json  dataset_type.json  lc_column_vendor.json  library_layout.json  matrix_deposition_method.json  ms_scan_mode.json  preparation_instrument_model.json  preparation_matrix.json  sequencing_reagent_kit.json  spatial_sampling_type.json  transposition_method.json  umi_read.json
metadata/af/: af-field-mappings.csv  af-nonstandard-values.json  af-patches.json  transformation-summary.html
metadata/atacseq/: atacseq-field-mappings.csv  atacseq-nonstandard-values.json  atacseq-patches.json  transformation-summary.html
metadata/cedar-10x-multiome/: 10x-multiome-field-mappings.csv  transformation-summary.html
metadata/cedar-af/: af-field-mappings.csv  af-nonstandard-values.json  af-patches.json  transformation-summary.html
metadata/cedar-histology/: histology-field-mappings.csv  histology-nonstandard-values.json  histology-patches.json  transformation-summary.html
metadata/cedar-lightsheet/: lightsheet-field-mappings.csv  transformation-summary.html
metadata/cedar-maldi/: maldi-field-mappings.csv  maldi-nonstandard-values.json  maldi-patches.json  transformation-summary.html
metadata/cedar-music/: music-field-mappings.csv  music-nonstandard-values.json  music-patches.json  transformation-summary.html
metadata/cedar-rnaseq/: rnaseq-field-mappings.csv  rnaseq-nonstandard-values.json  rnaseq-patches.json  transformation-summary.html
metadata/cedar-visium-no-probes/: transformation-summary.html  visium-no-probes-field-mappings.csv
metadata/celldive/: celldive-field-mappings.csv  celldive-nonstandard-values.json  celldive-patches.json  transformation-summary.html
metadata/codex/: codex-field-mappings.csv  codex-nonstandard-values.json  codex-patches.json  transformation-summary.html
metadata/desi/: desi-field-mappings.csv  desi-nonstandard-values.json  desi-patches.json  transformation-summary.html
metadata/histology/: histology-field-mappings.csv  histology-nonstandard-values.json  histology-patches.json  transformation-summary.html
patches/: README.md  atacseq_patch.json  pipeline-rules.json  rnaseq_patch  rnaseq_patch.json
scripts/: README.md  find-nonstandard-values.py  find-values-for-review.py  generate-field-mapping.py  generate-target-schema.py  generate-transformation-summary.py
tools/json-rules-engine/: .gitignore  README.md  pyproject.toml
tools/json-rules-engine/src/json_rules_engine/: __init__.py  applier.py  exceptions.py  patches.py
tools/json-rules-engine/tests/: __init__.py  test_patch_applier.py
tools/metadata-transformer/: .flake8  PATCH_EXPRESSION.md  README.md  pyproject.toml
tools/metadata-transformer/docs/: FIELD_MAPPING_GUIDE.md  INPUT_STRUCTURE.md  OUTPUT_STRUCTURE.md  VALUE_MAPPING_GUIDE.md
tools/metadata-transformer/src/metadata_transformer/: __init__.py  cli.py  exceptions.py  field_mapper.py  output_generator.py  patch_applier.py  processing_log.py  processing_log_provider.py  schema_applier.py  schema_loader.py  transformer.py  value_mapper.py
tools/metadata-transformer/tests/: __init__.py  test_cli.py  test_field_mapper.py  test_output_generator.py  test_patch_applier.py  test_processing_log.py  test_schema_applier.py  test_schema_loader.py  test_transformer.py  test_value_mapper.py
(+5752 files in other folders)
